@startuml
class Cadena {
  - nombre: String
  - listaProgramas: ArrayList<Programa>
  + Cadena(nombre: String)
  + agregarPrograma(programa: Programa)
  + borrarPrograma(programa: Programa)
}

class Programa {
  - nombre: String
  - cadena: Cadena
  - temporadas: int
  - listaEmpleados: ArrayList<Empleado>
  - listaInvitados: ArrayList<Invitado>
  - director: Empleado
  + Programa(nombre: String, cadena: Cadena, nombreDirector: String)
  + agregarEmpleado(nombre: String, cargo: String, director: Empleado)
  + borrarEmpleado(empleado: Empleado)
  + agregarInvitados(nombre: String, cargo: String, temporadas: int, fecha: LocalDate)
  + borrarInvitados(invitado: Invitado)
  + vecesInvitado(nombre: String): int
  + rastrearInvitado(nombre: String)
  + buscarInvitado(nombre: String): boolean
  + invitadoAntes(nombre: String)
}

class Empleado {
  - id: String
  - nombre: String
  - cargo: String
  - director: Empleado
  + Empleado(nombre: String, cargo: String, director: Empleado)
}

class Invitado {
  - nombre: String
  - profesion: String
  - fecha_visita: LocalDate
  - temporada: int
  + Invitado(nombre: String, profesion: String, temporada: int, fecha_visita: LocalDate)
}

Cadena "1" --o "many" Programa : contiene
Programa "1" --* "many" Invitado : tiene
Programa "1" -- "many" Empleado : emplea
Empleado "1" -- "0..1" Empleado : tiene como director


@enduml